# practice-rust-cart

./: .env.example  .gitignore  Cargo.toml  README.md
migrations/: 20260612034643_create_users_table.down.sql  20260612034643_create_users_table.up.sql  20260612093248_create_refresh_tokens_table.up.sql  20260613141025_create_password_reset_tokens_table.down.sql  20260613141025_create_password_reset_tokens_table.up.sql  20260615054255_create_products_table.down.sql  20260615054255_create_products_table.up.sql
src/: errors.rs  handlers.rs  jwt.rs  main.rs  user_repo.rs
src/extractors/: jwt.rs
src/handlers/: products.rs
src/models/: products.rs
src/repositories/: products.rs
templates/: resend_email.html
